[package]
name = "yew-taskboard"
version = "0.1.0"
authors = ["Kensuke Kubo <kensukekubo19@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2"
diesel = { version = "1.4.6", features = ["sqlite"] }
console_error_panic_hook = "0.1.6"
js-sys = "0.3.50"
